--- a/src/card2.html
+++ b/src/card2.html
@@ -93,7 +93,8 @@
 									Поиск по сайту
 								</p>
 								<form action="#" class="menu2__form">
-									<input type="search" placeholder="" name="search">
+									<input type="search" placeholder="Начните вводить для поиска..." name="search">
+
 									<button>
 										<img src="/img/search.png" alt="">
 									</button>
@@ -2231,7 +2232,8 @@
 							Поиск по сайту
 						</p>
 						<form action="#" class="menu2__form">
-							<input type="search" placeholder="" name="search">
+							<input type="search" placeholder="Начните вводить для поиска..." name="search">
+
 							<button>
 								<img src="/img/search.png" alt="">
 							</button>
