--- a/src/catalog.html
+++ b/src/catalog.html
@@ -90,7 +90,8 @@
 									Поиск по сайту
 								</p>
 								<form action="#" class="menu2__form">
-									<input type="search" placeholder="" name="search">
+									<input type="search" placeholder="Начните вводить для поиска..." name="search">
+
 									<button>
 										<img src="/img/search.png" alt="">
 									</button>
@@ -852,7 +853,7 @@
 								</div>
 							</div>
 							<a href="#" class="cat__link">
-								Сбросить фильтры
+								Сбросить весь фильтр
 							</a>
 						</div>
 						<div class="cat__items">
@@ -1835,7 +1836,8 @@
 							Поиск по сайту
 						</p>
 						<form action="#" class="menu2__form">
-							<input type="search" placeholder="" name="search">
+							<input type="search" placeholder="Начните вводить для поиска..." name="search">
+
 							<button>
 								<img src="/img/search.png" alt="">
 							</button>
