--- a/src/contacts.html
+++ b/src/contacts.html
@@ -91,7 +91,8 @@
 									Поиск по сайту
 								</p>
 								<form action="#" class="menu2__form">
-									<input type="search" placeholder="" name="search">
+									<input type="search" placeholder="Начните вводить для поиска..." name="search">
+
 									<button>
 										<img src="/img/search.png" alt="">
 									</button>
@@ -697,7 +698,8 @@
 							Поиск по сайту
 						</p>
 						<form action="#" class="menu2__form">
-							<input type="search" placeholder="" name="search">
+							<input type="search" placeholder="Начните вводить для поиска..." name="search">
+
 							<button>
 								<img src="/img/search.png" alt="">
 							</button>
