--- a/src/main.html
+++ b/src/main.html
@@ -91,7 +91,7 @@
 									Поиск по сайту
 								</p>
 								<form action="#" class="menu2__form">
-									<input type="search" placeholder="" name="search">
+									<input type="search" placeholder="Начните вводить для поиска..." name="search">
 									<button>
 										<img src="/img/search.png" alt="">
 									</button>
@@ -4215,7 +4215,7 @@
 							Поиск по сайту
 						</p>
 						<form action="#" class="menu2__form">
-							<input type="search" placeholder="" name="search">
+							<input type="search" placeholder="Начните вводить для поиска..." name="search">
 							<button>
 								<img src="/img/search.png" alt="">
 							</button>
