--- a/src/rev.html
+++ b/src/rev.html
@@ -90,7 +90,8 @@
 									Поиск по сайту
 								</p>
 								<form action="#" class="menu2__form">
-									<input type="search" placeholder="" name="search">
+									<input type="search" placeholder="Начните вводить для поиска..." name="search">
+
 									<button>
 										<img src="/img/search.png" alt="">
 									</button>
@@ -1655,7 +1656,8 @@
 							Поиск по сайту
 						</p>
 						<form action="#" class="menu2__form">
-							<input type="search" placeholder="" name="search">
+							<input type="search" placeholder="Начните вводить для поиска..." name="search">
+
 							<button>
 								<img src="/img/search.png" alt="">
 							</button>
