--- a/dev/about.html
+++ b/dev/about.html
@@ -29,13 +29,13 @@
 <body>
 	<div class="body-wrap page">
 		<div class="note" id="note1">
-			<img src="css/img/el1.svg" alt="" class="note__pic">
+			<img src="cssimg/el1.svg" alt="" class="note__pic">
 			<p class="note__text">
 				Авторский Интернет-магазин нишевой, винтажной и эксклюзивной парфюмерии. Оригинальный и Селективный парфюм
 				для женщин и мужчин.
 			</p>
 			<a href="#" class="note__close" onclick="(document.getElementById('note1').style.display='none')">
-				<img src="/img/close6.png" alt="">
+				<img src="img/close6.png" alt="">
 			</a>
 		</div>
 		<header class="header" id="header">
@@ -45,30 +45,30 @@
 						<div class="nav__left d-flex">
 							<div class="nav__item">
 								<a href="tel:+74951234567" class="nav__tel d-flex">
-									<img src="/img/a1.png" alt="">
+									<img src="img/a1.png" alt="">
 									<p>
 										+7 (495) 123-45-67
 									</p>
 								</a>
 								<div class="nav__links d-flex">
 									<a href="#" class="nav__mail d-flex">
-										<img src="/img/a3.png" alt="">
+										<img src="img/a3.png" alt="">
 										<p>
 											Задать вопрос
 										</p>
 									</a>
 									<div class="nav__row d-flex">
 										<a href="#" target="blank">
-											<img src="/img/a4.png" alt="">
+											<img src="img/a4.png" alt="">
 										</a>
 										<a href="#" target="blank">
-											<img src="/img/a5.png" alt="">
+											<img src="img/a5.png" alt="">
 										</a>
 									</div>
 								</div>
 							</div>
 							<div class="nav__item d-flex">
-								<img src="/img/a2.png" alt="" class="nav__icon">
+								<img src="img/a2.png" alt="" class="nav__icon">
 								<div class="nav__content">
 									<p class="nav__name ">
 										Время работы:
@@ -80,7 +80,7 @@
 							</div>
 						</div>
 						<a href="main.html" class="nav__logo">
-							<img src="/img/logo.png" alt="">
+							<img src="img/logo.png" alt="">
 						</a>
 						<div class="nav__right d-flex">
 							<div class="menu-btn2">
@@ -93,24 +93,24 @@
 									<input type="search" placeholder="Начните вводить для поиска..." name="search">
 
 									<button>
-										<img src="/img/search.png" alt="">
+										<img src="img/search.png" alt="">
 									</button>
 								</form>
 							</div>
 							<a href="#" class="nav__personal">
-								<img src="/img/a6.png" alt="">
+								<img src="img/a6.png" alt="">
 							</a>
 							<a href="#" class="nav__like">
 								<div class="nav__sum">
 									12
 								</div>
-								<img src="/img/a7.png" alt="">
+								<img src="img/a7.png" alt="">
 							</a>
 							<a href="#" class="nav__basket menu-btn3">
 								<div class="nav__sum">
 									12
 								</div>
-								<img src="/img/a8.png" alt="">
+								<img src="img/a8.png" alt="">
 								<p class="nav__num">
 									12 348 ₽
 								</p>
@@ -123,7 +123,7 @@
 									<div class="menu3__item d-flex">
 										<div class="menu3__left">
 											<div class="menu3__block">
-												<img src="/img/z1.png" alt="">
+												<img src="img/z1.png" alt="">
 											</div>
 											<div class="menu3__content">
 												<p class="menu3__name">
@@ -143,13 +143,13 @@
 											</div>
 										</div>
 										<a href="#" class="menu3__delete">
-											<img src="/img/delete.png" alt="">
+											<img src="img/delete.png" alt="">
 										</a>
 									</div>
 									<div class="menu3__item d-flex">
 										<div class="menu3__left">
 											<div class="menu3__block">
-												<img src="/img/z1.png" alt="">
+												<img src="img/z1.png" alt="">
 											</div>
 											<div class="menu3__content">
 												<p class="menu3__name">
@@ -169,13 +169,13 @@
 											</div>
 										</div>
 										<a href="#" class="menu3__delete">
-											<img src="/img/delete.png" alt="">
+											<img src="img/delete.png" alt="">
 										</a>
 									</div>
 									<div class="menu3__item d-flex">
 										<div class="menu3__left">
 											<div class="menu3__block">
-												<img src="/img/z1.png" alt="">
+												<img src="img/z1.png" alt="">
 											</div>
 											<div class="menu3__content">
 												<p class="menu3__name">
@@ -195,13 +195,13 @@
 											</div>
 										</div>
 										<a href="#" class="menu3__delete">
-											<img src="/img/delete.png" alt="">
+											<img src="img/delete.png" alt="">
 										</a>
 									</div>
 									<div class="menu3__item d-flex">
 										<div class="menu3__left">
 											<div class="menu3__block">
-												<img src="/img/z1.png" alt="">
+												<img src="img/z1.png" alt="">
 											</div>
 											<div class="menu3__content">
 												<p class="menu3__name">
@@ -221,13 +221,13 @@
 											</div>
 										</div>
 										<a href="#" class="menu3__delete">
-											<img src="/img/delete.png" alt="">
+											<img src="img/delete.png" alt="">
 										</a>
 									</div>
 									<div class="menu3__item d-flex">
 										<div class="menu3__left">
 											<div class="menu3__block">
-												<img src="/img/z1.png" alt="">
+												<img src="img/z1.png" alt="">
 											</div>
 											<div class="menu3__content">
 												<p class="menu3__name">
@@ -247,7 +247,7 @@
 											</div>
 										</div>
 										<a href="#" class="menu3__delete">
-											<img src="/img/delete.png" alt="">
+											<img src="img/delete.png" alt="">
 										</a>
 									</div>
 								</div>
@@ -273,7 +273,7 @@
 											Перейти к оформлению
 										</a>
 										<a href="#" class="menu3__close">
-											<img src="/img/cl.png" alt="">
+											<img src="img/cl.png" alt="">
 										</a>
 									</div>
 								</div>
@@ -325,30 +325,30 @@
 							<div class="nav__left d-flex">
 								<div class="nav__item">
 									<a href="tel:+74951234567" class="nav__tel d-flex">
-										<img src="/img/a1.png" alt="">
+										<img src="img/a1.png" alt="">
 										<p>
 											+7 (495) 123-45-67
 										</p>
 									</a>
 									<div class="nav__links d-flex">
 										<a href="#" class="nav__mail d-flex">
-											<img src="/img/a3.png" alt="">
+											<img src="img/a3.png" alt="">
 											<p>
 												Задать вопрос
 											</p>
 										</a>
 										<div class="nav__row d-flex">
 											<a href="#" target="blank">
-												<img src="/img/a4.png" alt="">
+												<img src="img/a4.png" alt="">
 											</a>
 											<a href="#" target="blank">
-												<img src="/img/a5.png" alt="">
+												<img src="img/a5.png" alt="">
 											</a>
 										</div>
 									</div>
 								</div>
 								<div class="nav__item d-flex">
-									<img src="/img/a2.png" alt="" class="nav__icon">
+									<img src="img/a2.png" alt="" class="nav__icon">
 									<div class="nav__content">
 										<p class="nav__name ">
 											Время работы:
@@ -416,7 +416,7 @@
 					</a>
 				</div>
 			</div>
-			<img src="/img/ab.png" alt="" class="about__img">
+			<img src="img/ab.png" alt="" class="about__img">
 			<div class="about__top">
 				<div class="container">
 					<div class="about__wrap">
@@ -438,7 +438,7 @@
 				<div class="container">
 					<div class="about__flex d-flex">
 						<div class="about__block">
-							<img src="/img/pic1.png" alt="">
+							<img src="img/pic1.png" alt="">
 							<p class="about__name">
 								Удовлетворенность клиентов
 							</p>
@@ -451,7 +451,7 @@
 							</p>
 						</div>
 						<div class="about__block">
-							<img src="/img/pic2.png" alt="">
+							<img src="img/pic2.png" alt="">
 							<p class="about__name">
 								Страсть и азарт
 							</p>
@@ -465,7 +465,7 @@
 					</div>
 					<div class="about__row d-flex">
 						<div class="about__block">
-							<img src="/img/pic3.png" alt="">
+							<img src="img/pic3.png" alt="">
 							<p class="about__name">
 								Смелость
 							</p>
@@ -478,7 +478,7 @@
 							</p>
 						</div>
 						<div class="about__block">
-							<img src="/img/pic4.png" alt="">
+							<img src="img/pic4.png" alt="">
 							<p class="about__name">
 								Команда
 							</p>
@@ -490,7 +490,7 @@
 							</p>
 						</div>
 						<div class="about__block">
-							<img src="/img/pic5.png" alt="">
+							<img src="img/pic5.png" alt="">
 							<p class="about__name">
 								Безопасность
 							</p>
@@ -517,7 +517,7 @@
 									их отзывы.
 								</p>
 							</div>
-							<img src="/img/pic6.png" alt="" class="about__pic">
+							<img src="img/pic6.png" alt="" class="about__pic">
 						</div>
 						<div class="about__item d-flex">
 							<div class="about__content">
@@ -534,7 +534,7 @@
 									структуры страницы.
 								</p>
 							</div>
-							<img src="/img/pic7.png" alt="" class="about__pic">
+							<img src="img/pic7.png" alt="" class="about__pic">
 						</div>
 						<div class="about__item d-flex">
 							<div class="about__content">
@@ -549,7 +549,7 @@
 									предоставляя нашим онлайн-клиентам дополнительные ноу-хау.
 								</p>
 							</div>
-							<img src="/img/pic8.png" alt="" class="about__pic">
+							<img src="img/pic8.png" alt="" class="about__pic">
 						</div>
 						<div class="about__item d-flex">
 							<div class="about__content">
@@ -566,7 +566,7 @@
 									ароматы.
 								</p>
 							</div>
-							<img src="/img/pic9.png" alt="" class="about__pic">
+							<img src="img/pic9.png" alt="" class="about__pic">
 						</div>
 						<div class="about__item d-flex">
 							<div class="about__content">
@@ -581,7 +581,7 @@
 									ждут ваших звонков.
 								</p>
 							</div>
-							<img src="/img/pic10.png" alt="" class="about__pic">
+							<img src="img/pic10.png" alt="" class="about__pic">
 						</div>
 						<div class="about__item d-flex">
 							<div class="about__content">
@@ -599,7 +599,7 @@
 									политикой возврата в течение 180 дней.
 								</p>
 							</div>
-							<img src="/img/pic11.png" alt="" class="about__pic">
+							<img src="img/pic11.png" alt="" class="about__pic">
 						</div>
 						<div class="about__item d-flex">
 							<div class="about__content">
@@ -613,7 +613,7 @@
 									обходятся без бумаги.
 								</p>
 							</div>
-							<img src="/img/pic12.png" alt="" class="about__pic">
+							<img src="img/pic12.png" alt="" class="about__pic">
 						</div>
 						<div class="about__item d-flex">
 							<div class="about__content">
@@ -631,7 +631,7 @@
 									(номер сертификата DSC.332.07.2015 568)
 								</p>
 							</div>
-							<img src="/img/pic13.png" alt="" class="about__pic">
+							<img src="img/pic13.png" alt="" class="about__pic">
 						</div>
 					</div>
 					<div class="about__bottom">
@@ -640,7 +640,7 @@
 						</h2>
 						<div class="it__row d-flex">
 							<div class="it__item">
-								<img src="/img/it1.png" alt="" class="it__icon">
+								<img src="img/it1.png" alt="" class="it__icon">
 								<p class="it__name">
 									Бесплатная доставка
 								</p>
@@ -649,7 +649,7 @@
 								</p>
 							</div>
 							<div class="it__item">
-								<img src="/img/it2.png" alt="" class="it__icon">
+								<img src="img/it2.png" alt="" class="it__icon">
 								<p class="it__name">
 									Ценные подарки
 								</p>
@@ -658,7 +658,7 @@
 								</p>
 							</div>
 							<div class="it__item">
-								<img src="/img/it3.png" alt="" class="it__icon">
+								<img src="img/it3.png" alt="" class="it__icon">
 								<p class="it__name">
 									Легкий возврат
 								</p>
@@ -667,7 +667,7 @@
 								</p>
 							</div>
 							<div class="it__item">
-								<img src="/img/it4.png" alt="" class="it__icon">
+								<img src="img/it4.png" alt="" class="it__icon">
 								<p class="it__name">
 									Оплата при получении
 								</p>
@@ -684,12 +684,12 @@
 			<div class="container">
 				<div class="footer__box d-flex">
 					<div class="footer__left">
-						<img src="/img/footer-logo.png" alt="" class="footer__logo">
+						<img src="img/footer-logo.png" alt="" class="footer__logo">
 						<a href="#" class="footer__com" target="blank">
 							<p>
 								Разработка сайта
 							</p>
-							<img src="/img/com.png" alt="">
+							<img src="img/com.png" alt="">
 						</a>
 					</div>
 					<div class="footer__content d-flex">
@@ -789,23 +789,23 @@
 								Контакты
 							</p>
 							<a href="tel:+79152137661" class="footer__link d-flex">
-								<img src="/img/f11.png" alt="">
+								<img src="img/f11.png" alt="">
 								<p>
 									+7 (915) 213-76-61
 								</p>
 							</a>
 							<div class="footer__link d-flex">
-								<img src="/img/f22.png" alt="">
+								<img src="img/f22.png" alt="">
 								<p>
 									Время работы: пн - вс, 09:00 - 19:00 МСК
 								</p>
 							</div>
 							<div class="footer__flex d-flex">
 								<a href="#" class="footer__site" target="blank">
-									<img src="/img/f33.png" alt="">
+									<img src="img/f33.png" alt="">
 								</a>
 								<a href="#" class="footer__site" target="blank">
-									<img src="/img/f4.png" alt="">
+									<img src="img/f4.png" alt="">
 								</a>
 								<a href="#" class="footer__ask">
 									Задать вопрос
@@ -822,19 +822,19 @@
 						<p>
 							Мы принимаем
 						</p>
-						<img src="/img/oplata.png" alt="">
+						<img src="img/oplata.png" alt="">
 					</div>
 					<div class="footer__last d-flex">
 						<p>
 							Доставляем
 						</p>
 						<div class="footer__images d-flex">
-							<img src="/img/b1.png" alt="">
-							<img src="/img/b2.png" alt="">
-							<img src="/img/b3.png" alt="">
-							<img src="/img/b4.png" alt="">
-							<img src="/img/b5.png" alt="">
-							<img src="/img/b6.png" alt="">
+							<img src="img/b1.png" alt="">
+							<img src="img/b2.png" alt="">
+							<img src="img/b3.png" alt="">
+							<img src="img/b4.png" alt="">
+							<img src="img/b5.png" alt="">
+							<img src="img/b6.png" alt="">
 						</div>
 					</div>
 				</div>
@@ -853,24 +853,24 @@
 							<input type="search" placeholder="Начните вводить для поиска..." name="search">
 
 							<button>
-								<img src="/img/search.png" alt="">
+								<img src="img/search.png" alt="">
 							</button>
 						</form>
 					</div>
 					<a href="#" class="nav__personal">
-						<img src="/img/a6.png" alt="">
+						<img src="img/a6.png" alt="">
 					</a>
 					<a href="#" class="nav__like">
 						<div class="nav__sum">
 							12
 						</div>
-						<img src="/img/a7.png" alt="">
+						<img src="img/a7.png" alt="">
 					</a>
 					<a class="nav__basket menu-btn33">
 						<div class="nav__sum">
 							12
 						</div>
-						<img src="/img/a8.png" alt="">
+						<img src="img/a8.png" alt="">
 						<p class="nav__num">
 							12 348 ₽
 						</p>
@@ -883,7 +883,7 @@
 							<div class="menu3__item d-flex">
 								<div class="menu3__left">
 									<div class="menu3__block">
-										<img src="/img/z1.png" alt="">
+										<img src="img/z1.png" alt="">
 									</div>
 									<div class="menu3__content">
 										<p class="menu3__name">
@@ -903,13 +903,13 @@
 									</div>
 								</div>
 								<a href="#" class="menu3__delete">
-									<img src="/img/delete.png" alt="">
+									<img src="img/delete.png" alt="">
 								</a>
 							</div>
 							<div class="menu3__item d-flex">
 								<div class="menu3__left">
 									<div class="menu3__block">
-										<img src="/img/z1.png" alt="">
+										<img src="img/z1.png" alt="">
 									</div>
 									<div class="menu3__content">
 										<p class="menu3__name">
@@ -929,13 +929,13 @@
 									</div>
 								</div>
 								<a href="#" class="menu3__delete">
-									<img src="/img/delete.png" alt="">
+									<img src="img/delete.png" alt="">
 								</a>
 							</div>
 							<div class="menu3__item d-flex">
 								<div class="menu3__left">
 									<div class="menu3__block">
-										<img src="/img/z1.png" alt="">
+										<img src="img/z1.png" alt="">
 									</div>
 									<div class="menu3__content">
 										<p class="menu3__name">
@@ -955,13 +955,13 @@
 									</div>
 								</div>
 								<a href="#" class="menu3__delete">
-									<img src="/img/delete.png" alt="">
+									<img src="img/delete.png" alt="">
 								</a>
 							</div>
 							<div class="menu3__item d-flex">
 								<div class="menu3__left">
 									<div class="menu3__block">
-										<img src="/img/z1.png" alt="">
+										<img src="img/z1.png" alt="">
 									</div>
 									<div class="menu3__content">
 										<p class="menu3__name">
@@ -981,13 +981,13 @@
 									</div>
 								</div>
 								<a href="#" class="menu3__delete">
-									<img src="/img/delete.png" alt="">
+									<img src="img/delete.png" alt="">
 								</a>
 							</div>
 							<div class="menu3__item d-flex">
 								<div class="menu3__left">
 									<div class="menu3__block">
-										<img src="/img/z1.png" alt="">
+										<img src="img/z1.png" alt="">
 									</div>
 									<div class="menu3__content">
 										<p class="menu3__name">
@@ -1007,7 +1007,7 @@
 									</div>
 								</div>
 								<a href="#" class="menu3__delete">
-									<img src="/img/delete.png" alt="">
+									<img src="img/delete.png" alt="">
 								</a>
 							</div>
 						</div>
@@ -1033,7 +1033,7 @@
 									Перейти к оформлению
 								</a>
 								<a href="#" class="menu33__close">
-									<img src="/img/cl.png" alt="">
+									<img src="img/cl.png" alt="">
 								</a>
 							</div>
 						</div>
