--- a/dev/index.html
+++ b/dev/index.html
@@ -104,7 +104,7 @@
 	</div>
 	<div class="popup__bg" id="popup">
 		<div class="popup">
-			<img src="/img/close.png" alt="" class="close-popup">
+			<img src="img/close.png" alt="" class="close-popup">
 			<div class="popup__wrap">
 				<div class="popup__top d-flex">
 					<p class="popup__title">
@@ -132,16 +132,16 @@
 					</p>
 					<div class="popup__flex d-flex">
 						<a href="#" class="popup__soc">
-							<img src="/img/popup1.png" alt="">
+							<img src="img/popup1.png" alt="">
 						</a>
 						<a href="#" class="popup__soc">
-							<img src="/img/popup2.png" alt="">
+							<img src="img/popup2.png" alt="">
 						</a>
 						<a href="#" class="popup__soc">
-							<img src="/img/popup3.png" alt="">
+							<img src="img/popup3.png" alt="">
 						</a>
 						<a href="#" class="popup__soc">
-							<img src="/img/popup4.png" alt="">
+							<img src="img/popup4.png" alt="">
 						</a>
 					</div>
 				</form>
@@ -150,7 +150,7 @@
 	</div>
 	<div class="popup__bg2" id="popup2">
 		<div class="popup2">
-			<img src="/img/close.png" alt="" class="close-popup2">
+			<img src="img/close.png" alt="" class="close-popup2">
 			<div class="popup__wrap">
 				<div class="popup__top d-flex">
 					<p class="popup__title">
@@ -179,16 +179,16 @@
 					</p>
 					<div class="popup__flex d-flex">
 						<a href="#" class="popup__soc">
-							<img src="/img/popup1.png" alt="">
+							<img src="img/popup1.png" alt="">
 						</a>
 						<a href="#" class="popup__soc">
-							<img src="/img/popup2.png" alt="">
+							<img src="img/popup2.png" alt="">
 						</a>
 						<a href="#" class="popup__soc">
-							<img src="/img/popup3.png" alt="">
+							<img src="img/popup3.png" alt="">
 						</a>
 						<a href="#" class="popup__soc">
-							<img src="/img/popup4.png" alt="">
+							<img src="img/popup4.png" alt="">
 						</a>
 					</div>
 				</form>
@@ -197,7 +197,7 @@
 	</div>
 	<div class="popup__bg3" id="popup3">
 		<div class="popup3">
-			<img src="/img/close.png" alt="" class="close-popup3">
+			<img src="img/close.png" alt="" class="close-popup3">
 			<div class="popup__wrap">
 				<p class="popup__title">
 					Задать вопрос
@@ -256,23 +256,23 @@
 	</div>
 	<div class="popup__bg4" id="popup4">
 		<div class="popup4">
-			<img src="/img/close.png" alt="" class="close-popup4">
+			<img src="img/close.png" alt="" class="close-popup4">
 			<div class="popup__wrap d-flex">
 				<div class="popup-row1">
 					<div class="card__slider d-flex">
 						<div class="slider-nav">
-							<div class="slider-nav__item"><img src="/img/small1.png" alt=""></div>
-							<div class="slider-nav__item"><img src="/img/small2.png" alt=""></div>
-							<div class="slider-nav__item"><img src="/img/small3.png" alt=""></div>
-							<div class="slider-nav__item"><img src="/img/small4.png" alt=""></div>
-							<div class="slider-nav__item"><img src="/img/small1.png" alt=""></div>
+							<div class="slider-nav__item"><img src="img/small1.png" alt=""></div>
+							<div class="slider-nav__item"><img src="img/small2.png" alt=""></div>
+							<div class="slider-nav__item"><img src="img/small3.png" alt=""></div>
+							<div class="slider-nav__item"><img src="img/small4.png" alt=""></div>
+							<div class="slider-nav__item"><img src="img/small1.png" alt=""></div>
 						</div>
 						<div class="slider">
-							<div class="slider__item"><img src="/img/big.png" alt=""></div>
-							<div class="slider__item"><img src="/img/big.png" alt=""></div>
-							<div class="slider__item"><img src="/img/big.png" alt=""></div>
-							<div class="slider__item"><img src="/img/big.png" alt=""></div>
-							<div class="slider__item"><img src="/img/big.png" alt=""></div>
+							<div class="slider__item"><img src="img/big.png" alt=""></div>
+							<div class="slider__item"><img src="img/big.png" alt=""></div>
+							<div class="slider__item"><img src="img/big.png" alt=""></div>
+							<div class="slider__item"><img src="img/big.png" alt=""></div>
+							<div class="slider__item"><img src="img/big.png" alt=""></div>
 						</div>
 					</div>
 					<div class="popup__info">
@@ -322,27 +322,27 @@
 						</p>
 						<div class="popup-row2__right">
 							<div class="popup-row2__block">
-								<img src="/img/z5.png" alt="">
+								<img src="img/z5.png" alt="">
 							</div>
 							<div class="popup-row2__local d-flex">
 								<p>
 									Страна-изготовитель
 								</p>
-								<img src="/img/fra.png" alt="">
+								<img src="img/fra.png" alt="">
 							</div>
 						</div>
 					</div>
 					<div class="popup-row2__content d-flex">
 						<div class="pop__flex d-flex">
 							<div class="pop__stars d-flex">
-								<img src="/img/star1.png" alt="">
-								<img src="/img/star1.png" alt="">
-								<img src="/img/star1.png" alt="">
-								<img src="/img/star1.png" alt="">
-								<img src="/img/star2.png" alt="">
+								<img src="img/star1.png" alt="">
+								<img src="img/star1.png" alt="">
+								<img src="img/star1.png" alt="">
+								<img src="img/star1.png" alt="">
+								<img src="img/star2.png" alt="">
 							</div>
 							<div class="pop__mess d-flex">
-								<img src="/img/star3.png" alt="">
+								<img src="img/star3.png" alt="">
 								<p>
 									15
 								</p>
@@ -364,7 +364,7 @@
 						<div class="popup-table__item d-flex">
 							<div class="popup-table__left d-flex">
 								<div class="popup-table__block">
-									<img src="/img/z1.png" alt="">
+									<img src="img/z1.png" alt="">
 								</div>
 								<p class="popup-table__name">
 									Парфюмерная вода 4,5 мл
@@ -382,7 +382,7 @@
 						<div class="popup-table__item d-flex">
 							<div class="popup-table__left d-flex">
 								<div class="popup-table__block">
-									<img src="/img/z2.png" alt="">
+									<img src="img/z2.png" alt="">
 								</div>
 								<p class="popup-table__name">
 									Парфюмерная вода 8 мл
@@ -398,7 +398,7 @@
 						<div class="popup-table__item d-flex">
 							<div class="popup-table__left d-flex">
 								<div class="popup-table__block">
-									<img src="/img/z3.png" alt="">
+									<img src="img/z3.png" alt="">
 								</div>
 								<p class="popup-table__name">
 									Парфюмерная вода 30 мл
@@ -416,7 +416,7 @@
 						<div class="popup-table__item d-flex">
 							<div class="popup-table__left d-flex">
 								<div class="popup-table__block">
-									<img src="/img/z4.png" alt="">
+									<img src="img/z4.png" alt="">
 								</div>
 								<p class="popup-table__name">
 									Парфюмерная вода 4,5 мл
@@ -434,7 +434,7 @@
 						<div class="popup-table__item d-flex">
 							<div class="popup-table__left d-flex">
 								<div class="popup-table__block">
-									<img src="/img/z1.png" alt="">
+									<img src="img/z1.png" alt="">
 								</div>
 								<p class="popup-table__name">
 									Парфюмерная вода 4,5 мл
@@ -452,7 +452,7 @@
 						<div class="popup-table__item d-flex">
 							<div class="popup-table__left d-flex">
 								<div class="popup-table__block">
-									<img src="/img/z2.png" alt="">
+									<img src="img/z2.png" alt="">
 								</div>
 								<p class="popup-table__name">
 									Парфюмерная вода 4,5 мл
@@ -470,7 +470,7 @@
 						<div class="popup-table__item d-flex">
 							<div class="popup-table__left d-flex">
 								<div class="popup-table__block">
-									<img src="/img/z3.png" alt="">
+									<img src="img/z3.png" alt="">
 								</div>
 								<p class="popup-table__name">
 									Парфюмерная вода 4,5 мл
@@ -488,7 +488,7 @@
 						<div class="popup-table__item d-flex">
 							<div class="popup-table__left d-flex">
 								<div class="popup-table__block">
-									<img src="/img/z4.png" alt="">
+									<img src="img/z4.png" alt="">
 								</div>
 								<p class="popup-table__name">
 									Парфюмерная вода 4,5 мл
@@ -513,7 +513,7 @@
 	</div>
 	<div class="popup__bg5" id="popup5">
 		<div class="popup5">
-			<img src="/img/close.png" alt="" class="close-popup5">
+			<img src="img/close.png" alt="" class="close-popup5">
 			<p class="popup__title">
 				Выбрать бренд
 			</p>
@@ -4946,22 +4946,22 @@
 	</div>
 	<div class="popup__bg6" id="popup6">
 		<div class="popup6">
-			<img src="/img/close.png" alt="" class="close-popup6">
+			<img src="img/close.png" alt="" class="close-popup6">
 			<div class="popup-row1">
 				<div class="card__slider d-flex">
 					<div class="slider-nav2">
-						<div class="slider-nav__item"><img src="/img/small1.png" alt=""></div>
-						<div class="slider-nav__item"><img src="/img/small2.png" alt=""></div>
-						<div class="slider-nav__item"><img src="/img/small3.png" alt=""></div>
-						<div class="slider-nav__item"><img src="/img/small4.png" alt=""></div>
-						<div class="slider-nav__item"><img src="/img/small1.png" alt=""></div>
+						<div class="slider-nav__item"><img src="img/small1.png" alt=""></div>
+						<div class="slider-nav__item"><img src="img/small2.png" alt=""></div>
+						<div class="slider-nav__item"><img src="img/small3.png" alt=""></div>
+						<div class="slider-nav__item"><img src="img/small4.png" alt=""></div>
+						<div class="slider-nav__item"><img src="img/small1.png" alt=""></div>
 					</div>
 					<div class="slider2">
-						<div class="slider__item"><img src="/img/big.png" alt=""></div>
-						<div class="slider__item"><img src="/img/big.png" alt=""></div>
-						<div class="slider__item"><img src="/img/big.png" alt=""></div>
-						<div class="slider__item"><img src="/img/big.png" alt=""></div>
-						<div class="slider__item"><img src="/img/big.png" alt=""></div>
+						<div class="slider__item"><img src="img/big.png" alt=""></div>
+						<div class="slider__item"><img src="img/big.png" alt=""></div>
+						<div class="slider__item"><img src="img/big.png" alt=""></div>
+						<div class="slider__item"><img src="img/big.png" alt=""></div>
+						<div class="slider__item"><img src="img/big.png" alt=""></div>
 					</div>
 				</div>
 			</div>
@@ -4972,7 +4972,7 @@
 	</div>
 	<div class="popup__bg7" id="popup7">
 		<div class="popup7">
-			<img src="/img/close.png" alt="" class="close-popup7">
+			<img src="img/close.png" alt="" class="close-popup7">
 			<div class="popup__wrap">
 				<p class="popup__title">
 					Оставьте отзыв
@@ -5044,7 +5044,7 @@
 	</div>
 	<div class="popup__bg8" id="popup8">
 		<div class="popup8">
-			<img src="/img/close.png" alt="" class="close-popup8">
+			<img src="img/close.png" alt="" class="close-popup8">
 			<div class="popup__wrap">
 				<p class="popup__title">
 					Сообщить о поступлении парфюма: <br>
@@ -5089,7 +5089,7 @@
 	</div>
 	<div class="popup__bg9" id="popup9">
 		<div class="popup9">
-			<img src="/img/close.png" alt="" class="close-popup9">
+			<img src="img/close.png" alt="" class="close-popup9">
 			<p>
 				Только зарегистрированные <br>
 				пользователи могут подписаться
