--- a/dev/contacts.html
+++ b/dev/contacts.html
@@ -30,13 +30,13 @@
 <body>
 	<div class="body-wrap page">
 		<div class="note" id="note1">
-			<img src="css/img/el1.svg" alt="" class="note__pic">
+			<img src="cssimg/el1.svg" alt="" class="note__pic">
 			<p class="note__text">
 				Авторский Интернет-магазин нишевой, винтажной и эксклюзивной парфюмерии. Оригинальный и Селективный парфюм
 				для женщин и мужчин.
 			</p>
 			<a href="#" class="note__close" onclick="(document.getElementById('note1').style.display='none')">
-				<img src="/img/close6.png" alt="">
+				<img src="img/close6.png" alt="">
 			</a>
 		</div>
 		<header class="header" id="header">
@@ -46,30 +46,30 @@
 						<div class="nav__left d-flex">
 							<div class="nav__item">
 								<a href="tel:+74951234567" class="nav__tel d-flex">
-									<img src="/img/a1.png" alt="">
+									<img src="img/a1.png" alt="">
 									<p>
 										+7 (495) 123-45-67
 									</p>
 								</a>
 								<div class="nav__links d-flex">
 									<a href="#" class="nav__mail d-flex">
-										<img src="/img/a3.png" alt="">
+										<img src="img/a3.png" alt="">
 										<p>
 											Задать вопрос
 										</p>
 									</a>
 									<div class="nav__row d-flex">
 										<a href="#" target="blank">
-											<img src="/img/a4.png" alt="">
+											<img src="img/a4.png" alt="">
 										</a>
 										<a href="#" target="blank">
-											<img src="/img/a5.png" alt="">
+											<img src="img/a5.png" alt="">
 										</a>
 									</div>
 								</div>
 							</div>
 							<div class="nav__item d-flex">
-								<img src="/img/a2.png" alt="" class="nav__icon">
+								<img src="img/a2.png" alt="" class="nav__icon">
 								<div class="nav__content">
 									<p class="nav__name ">
 										Время работы:
@@ -81,7 +81,7 @@
 							</div>
 						</div>
 						<a href="main.html" class="nav__logo">
-							<img src="/img/logo.png" alt="">
+							<img src="img/logo.png" alt="">
 						</a>
 						<div class="nav__right d-flex">
 							<div class="menu-btn2">
@@ -94,24 +94,24 @@
 									<input type="search" placeholder="Начните вводить для поиска..." name="search">
 
 									<button>
-										<img src="/img/search.png" alt="">
+										<img src="img/search.png" alt="">
 									</button>
 								</form>
 							</div>
 							<a href="#" class="nav__personal">
-								<img src="/img/a6.png" alt="">
+								<img src="img/a6.png" alt="">
 							</a>
 							<a href="#" class="nav__like">
 								<div class="nav__sum">
 									12
 								</div>
-								<img src="/img/a7.png" alt="">
+								<img src="img/a7.png" alt="">
 							</a>
 							<a href="#" class="nav__basket menu-btn3">
 								<div class="nav__sum">
 									12
 								</div>
-								<img src="/img/a8.png" alt="">
+								<img src="img/a8.png" alt="">
 								<p class="nav__num">
 									12 348 ₽
 								</p>
@@ -124,7 +124,7 @@
 									<div class="menu3__item d-flex">
 										<div class="menu3__left">
 											<div class="menu3__block">
-												<img src="/img/z1.png" alt="">
+												<img src="img/z1.png" alt="">
 											</div>
 											<div class="menu3__content">
 												<p class="menu3__name">
@@ -144,13 +144,13 @@
 											</div>
 										</div>
 										<a href="#" class="menu3__delete">
-											<img src="/img/delete.png" alt="">
+											<img src="img/delete.png" alt="">
 										</a>
 									</div>
 									<div class="menu3__item d-flex">
 										<div class="menu3__left">
 											<div class="menu3__block">
-												<img src="/img/z1.png" alt="">
+												<img src="img/z1.png" alt="">
 											</div>
 											<div class="menu3__content">
 												<p class="menu3__name">
@@ -170,13 +170,13 @@
 											</div>
 										</div>
 										<a href="#" class="menu3__delete">
-											<img src="/img/delete.png" alt="">
+											<img src="img/delete.png" alt="">
 										</a>
 									</div>
 									<div class="menu3__item d-flex">
 										<div class="menu3__left">
 											<div class="menu3__block">
-												<img src="/img/z1.png" alt="">
+												<img src="img/z1.png" alt="">
 											</div>
 											<div class="menu3__content">
 												<p class="menu3__name">
@@ -196,13 +196,13 @@
 											</div>
 										</div>
 										<a href="#" class="menu3__delete">
-											<img src="/img/delete.png" alt="">
+											<img src="img/delete.png" alt="">
 										</a>
 									</div>
 									<div class="menu3__item d-flex">
 										<div class="menu3__left">
 											<div class="menu3__block">
-												<img src="/img/z1.png" alt="">
+												<img src="img/z1.png" alt="">
 											</div>
 											<div class="menu3__content">
 												<p class="menu3__name">
@@ -222,13 +222,13 @@
 											</div>
 										</div>
 										<a href="#" class="menu3__delete">
-											<img src="/img/delete.png" alt="">
+											<img src="img/delete.png" alt="">
 										</a>
 									</div>
 									<div class="menu3__item d-flex">
 										<div class="menu3__left">
 											<div class="menu3__block">
-												<img src="/img/z1.png" alt="">
+												<img src="img/z1.png" alt="">
 											</div>
 											<div class="menu3__content">
 												<p class="menu3__name">
@@ -248,7 +248,7 @@
 											</div>
 										</div>
 										<a href="#" class="menu3__delete">
-											<img src="/img/delete.png" alt="">
+											<img src="img/delete.png" alt="">
 										</a>
 									</div>
 								</div>
@@ -274,7 +274,7 @@
 											Перейти к оформлению
 										</a>
 										<a href="#" class="menu3__close">
-											<img src="/img/cl.png" alt="">
+											<img src="img/cl.png" alt="">
 										</a>
 									</div>
 								</div>
@@ -326,30 +326,30 @@
 							<div class="nav__left d-flex">
 								<div class="nav__item">
 									<a href="tel:+74951234567" class="nav__tel d-flex">
-										<img src="/img/a1.png" alt="">
+										<img src="img/a1.png" alt="">
 										<p>
 											+7 (495) 123-45-67
 										</p>
 									</a>
 									<div class="nav__links d-flex">
 										<a href="#" class="nav__mail d-flex">
-											<img src="/img/a3.png" alt="">
+											<img src="img/a3.png" alt="">
 											<p>
 												Задать вопрос
 											</p>
 										</a>
 										<div class="nav__row d-flex">
 											<a href="#" target="blank">
-												<img src="/img/a4.png" alt="">
+												<img src="img/a4.png" alt="">
 											</a>
 											<a href="#" target="blank">
-												<img src="/img/a5.png" alt="">
+												<img src="img/a5.png" alt="">
 											</a>
 										</div>
 									</div>
 								</div>
 								<div class="nav__item d-flex">
-									<img src="/img/a2.png" alt="" class="nav__icon">
+									<img src="img/a2.png" alt="" class="nav__icon">
 									<div class="nav__content">
 										<p class="nav__name ">
 											Время работы:
@@ -421,7 +421,7 @@
 				</h1>
 				<div class="contacts__row d-flex">
 					<div class="contacts__item d-flex">
-						<img src="/img/ff1.png" alt="">
+						<img src="img/ff1.png" alt="">
 						<div class="contacts__info">
 							<p class="contacts__name">
 								Офис
@@ -433,7 +433,7 @@
 						</div>
 					</div>
 					<div class="contacts__item d-flex">
-						<img src="/img/ff2.png" alt="">
+						<img src="img/ff2.png" alt="">
 						<div class="contacts__info">
 							<p class="contacts__name">
 								Режим работы
@@ -445,7 +445,7 @@
 						</div>
 					</div>
 					<div class="contacts__item d-flex">
-						<img src="/img/ff3.png" alt="">
+						<img src="img/ff3.png" alt="">
 						<div class="contacts__info">
 							<p class="contacts__name">
 								Телефон
@@ -459,7 +459,7 @@
 						</div>
 					</div>
 					<div class="contacts__item d-flex">
-						<img src="/img/ff4.png" alt="">
+						<img src="img/ff4.png" alt="">
 						<div class="contacts__info">
 							<p class="contacts__name">
 								E-mail
@@ -479,10 +479,10 @@
 							</p>
 							<div class="footer__socials d-flex">
 								<a href="#" class="footer__link" target="_blank">
-									<img src="/img/t4.png" alt="">
+									<img src="img/t4.png" alt="">
 								</a>
 								<a href="#" class="footer__link" target="_blank">
-									<img src="/img/t5.png" alt="">
+									<img src="img/t5.png" alt="">
 								</a>
 							</div>
 						</div>
@@ -490,7 +490,7 @@
 				</div>
 				<div class="contacts__box d-flex">
 					<div class="contacts__content">
-						<img src="/img/contacts.png" alt="" class="contacts__img">
+						<img src="img/contacts.png" alt="" class="contacts__img">
 						<div class="contacts__block">
 							<p class="contacts__title">
 								Схема проезда
@@ -502,7 +502,7 @@
 								"рыбой" для текстов на латинице
 								с начала XVI века.
 							</p>
-							<img src="/img/cont.png" alt="">
+							<img src="img/cont.png" alt="">
 						</div>
 					</div>
 					<div id="map"></div>
@@ -532,12 +532,12 @@
 			<div class="container">
 				<div class="footer__box d-flex">
 					<div class="footer__left">
-						<img src="/img/footer-logo.png" alt="" class="footer__logo">
+						<img src="img/footer-logo.png" alt="" class="footer__logo">
 						<a href="#" class="footer__com" target="blank">
 							<p>
 								Разработка сайта
 							</p>
-							<img src="/img/com.png" alt="">
+							<img src="img/com.png" alt="">
 						</a>
 					</div>
 					<div class="footer__content d-flex">
@@ -637,23 +637,23 @@
 								Контакты
 							</p>
 							<a href="tel:+79152137661" class="footer__link d-flex">
-								<img src="/img/f11.png" alt="">
+								<img src="img/f11.png" alt="">
 								<p>
 									+7 (915) 213-76-61
 								</p>
 							</a>
 							<div class="footer__link d-flex">
-								<img src="/img/f22.png" alt="">
+								<img src="img/f22.png" alt="">
 								<p>
 									Время работы: пн - вс, 09:00 - 19:00 МСК
 								</p>
 							</div>
 							<div class="footer__flex d-flex">
 								<a href="#" class="footer__site" target="blank">
-									<img src="/img/f33.png" alt="">
+									<img src="img/f33.png" alt="">
 								</a>
 								<a href="#" class="footer__site" target="blank">
-									<img src="/img/f4.png" alt="">
+									<img src="img/f4.png" alt="">
 								</a>
 								<a href="#" class="footer__ask">
 									Задать вопрос
@@ -670,19 +670,19 @@
 						<p>
 							Мы принимаем
 						</p>
-						<img src="/img/oplata.png" alt="">
+						<img src="img/oplata.png" alt="">
 					</div>
 					<div class="footer__last d-flex">
 						<p>
 							Доставляем
 						</p>
 						<div class="footer__images d-flex">
-							<img src="/img/b1.png" alt="">
-							<img src="/img/b2.png" alt="">
-							<img src="/img/b3.png" alt="">
-							<img src="/img/b4.png" alt="">
-							<img src="/img/b5.png" alt="">
-							<img src="/img/b6.png" alt="">
+							<img src="img/b1.png" alt="">
+							<img src="img/b2.png" alt="">
+							<img src="img/b3.png" alt="">
+							<img src="img/b4.png" alt="">
+							<img src="img/b5.png" alt="">
+							<img src="img/b6.png" alt="">
 						</div>
 					</div>
 				</div>
@@ -701,24 +701,24 @@
 							<input type="search" placeholder="Начните вводить для поиска..." name="search">
 
 							<button>
-								<img src="/img/search.png" alt="">
+								<img src="img/search.png" alt="">
 							</button>
 						</form>
 					</div>
 					<a href="#" class="nav__personal">
-						<img src="/img/a6.png" alt="">
+						<img src="img/a6.png" alt="">
 					</a>
 					<a href="#" class="nav__like">
 						<div class="nav__sum">
 							12
 						</div>
-						<img src="/img/a7.png" alt="">
+						<img src="img/a7.png" alt="">
 					</a>
 					<a class="nav__basket menu-btn33">
 						<div class="nav__sum">
 							12
 						</div>
-						<img src="/img/a8.png" alt="">
+						<img src="img/a8.png" alt="">
 						<p class="nav__num">
 							12 348 ₽
 						</p>
@@ -731,7 +731,7 @@
 							<div class="menu3__item d-flex">
 								<div class="menu3__left">
 									<div class="menu3__block">
-										<img src="/img/z1.png" alt="">
+										<img src="img/z1.png" alt="">
 									</div>
 									<div class="menu3__content">
 										<p class="menu3__name">
@@ -751,13 +751,13 @@
 									</div>
 								</div>
 								<a href="#" class="menu3__delete">
-									<img src="/img/delete.png" alt="">
+									<img src="img/delete.png" alt="">
 								</a>
 							</div>
 							<div class="menu3__item d-flex">
 								<div class="menu3__left">
 									<div class="menu3__block">
-										<img src="/img/z1.png" alt="">
+										<img src="img/z1.png" alt="">
 									</div>
 									<div class="menu3__content">
 										<p class="menu3__name">
@@ -777,13 +777,13 @@
 									</div>
 								</div>
 								<a href="#" class="menu3__delete">
-									<img src="/img/delete.png" alt="">
+									<img src="img/delete.png" alt="">
 								</a>
 							</div>
 							<div class="menu3__item d-flex">
 								<div class="menu3__left">
 									<div class="menu3__block">
-										<img src="/img/z1.png" alt="">
+										<img src="img/z1.png" alt="">
 									</div>
 									<div class="menu3__content">
 										<p class="menu3__name">
@@ -803,13 +803,13 @@
 									</div>
 								</div>
 								<a href="#" class="menu3__delete">
-									<img src="/img/delete.png" alt="">
+									<img src="img/delete.png" alt="">
 								</a>
 							</div>
 							<div class="menu3__item d-flex">
 								<div class="menu3__left">
 									<div class="menu3__block">
-										<img src="/img/z1.png" alt="">
+										<img src="img/z1.png" alt="">
 									</div>
 									<div class="menu3__content">
 										<p class="menu3__name">
@@ -829,13 +829,13 @@
 									</div>
 								</div>
 								<a href="#" class="menu3__delete">
-									<img src="/img/delete.png" alt="">
+									<img src="img/delete.png" alt="">
 								</a>
 							</div>
 							<div class="menu3__item d-flex">
 								<div class="menu3__left">
 									<div class="menu3__block">
-										<img src="/img/z1.png" alt="">
+										<img src="img/z1.png" alt="">
 									</div>
 									<div class="menu3__content">
 										<p class="menu3__name">
@@ -855,7 +855,7 @@
 									</div>
 								</div>
 								<a href="#" class="menu3__delete">
-									<img src="/img/delete.png" alt="">
+									<img src="img/delete.png" alt="">
 								</a>
 							</div>
 						</div>
@@ -881,7 +881,7 @@
 									Перейти к оформлению
 								</a>
 								<a href="#" class="menu33__close">
-									<img src="/img/cl.png" alt="">
+									<img src="img/cl.png" alt="">
 								</a>
 							</div>
 						</div>
@@ -910,7 +910,7 @@
 				}, {
 					iconLayout: 'default#image',
 					// Путь до нашей картинки
-					iconImageHref: '/img/icon.png',
+					iconImageHref: 'img/icon.png',
 					// Размер по ширине и высоте
 					iconImageSize: [62, 74],
 					// Смещение левого верхнего угла иконки относительно
